add_subdirectory(WindLabPlugin)
add_subdirectory(GeneralizedSpectrum)
add_subdirectory(RPSRandomnessProviders)
add_subdirectory(WindSimulationMethodWWYang1997)
add_subdirectory(WindSimulationMethodWWYang1997Ind)
add_subdirectory(RPSCholeskyDecomposition)
add_subdirectory(ErgodicityCheckToolPlugin)
add_subdirectory(PDFCheckToolPlugin)
add_subdirectory(CorrelationErgodicityPlugin)

